--- a/faq/ITS_schedule.html
+++ b/faq/ITS_schedule.html
@@ -30,11 +30,11 @@
 	</STYLE>
 </HEAD>
 <BODY LANG="en-US" TEXT="#000000" DIR="LTR">
-<a href="ITS_schedule.pdf" target="_blank" style="float:right;padding:0.2em;outline:0"><img alt="pdf" src="../css/media/pdf_icon.gif" /></a> 	
+<!--<a href="ITS_schedule.pdf" target="_blank" style="float:right;padding:0.2em;outline:0"><img alt="pdf" src="../css/media/pdf_icon.gif" /></a>--> 	
 <P CLASS="western" ALIGN=CENTER STYLE="margin-bottom: 0in"><FONT SIZE=3 STYLE="font-size: 13pt"><B>ITS
 Assignment Schedule</B></FONT></P>
 <P CLASS="western" ALIGN=CENTER STYLE="margin-bottom: 0in"><FONT SIZE=3><B>ECE
-2026 – Fall 2012</B></FONT></P>
+2026 – Spring 2013</B></FONT></P>
 <P CLASS="western" ALIGN=CENTER STYLE="margin-bottom: 0in"><BR>
 </P>
 <TABLE WIDTH=564 CELLPADDING=4 CELLSPACING=0>
@@ -64,10 +64,10 @@ Assignment Schedule</B></FONT></P>
 				<P CLASS="western" ALIGN=CENTER>1</P>
 			</TD>
 			<TD WIDTH=140 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Aug–20</P>
+				<P CLASS="western" ALIGN=CENTER>Jan–14</P>
 			</TD>
 			<TD WIDTH=177 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Sept–24</P>
+				<P CLASS="western" ALIGN=CENTER>Feb–1</P>
 			</TD>
 			<TD WIDTH=122 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0.04in">
 				<P CLASS="western" ALIGN=CENTER>A, B, ch. 1</P>
@@ -78,15 +78,16 @@ Assignment Schedule</B></FONT></P>
 				<P CLASS="western" ALIGN=CENTER>2</P>
 			</TD>
 			<TD WIDTH=140 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Aug–27</P>
+				<P CLASS="western" ALIGN=CENTER>Jan–22</P>
 			</TD>
 			<TD WIDTH=177 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Oct–1</P>
+				<P CLASS="western" ALIGN=CENTER>Feb–8</P>
 			</TD>
 			<TD WIDTH=122 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0.04in">
 				<P CLASS="western" ALIGN=CENTER>ch.2</P>
 			</TD>
 		</TR>
+		<!--
 		<TR VALIGN=TOP>
 			<TD WIDTH=92 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
 				<P CLASS="western" ALIGN=CENTER>3</P>
@@ -170,19 +171,16 @@ Assignment Schedule</B></FONT></P>
 			<TD WIDTH=122 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0.04in">
 				<P CLASS="western" ALIGN=CENTER>ch. 1–8 (review)</P>
 			</TD>
-		</TR>
+		</TR>-->
 	</TBODY>
 </TABLE>
 <BR>
 <UL>
 	<LI><P CLASS="western" STYLE="margin-bottom: 0in">ITS is keyed to
 	“Signal Processing First”  (McClellan, Schafer &amp; Yoder)
-	textbook.</P>
-	<LI><P CLASS="western" STYLE="margin-bottom: 0in">Openings/Closings
-	are typically on Mondays, scheduled to take place at <B>4 AM</B> 
-	</P>
+	textbook.</P></LI>
 	<LI><P CLASS="western" STYLE="margin-bottom: 0in">Each Assignment is
-	scheduled to be open for 3+ weeks</P>
+	scheduled to be open for 3+ weeks</P></LI>
 </UL>
 </BODY>
 </HTML>
