--- a/faq/ITS_schedule_tb.html
+++ b/faq/ITS_schedule_tb.html
@@ -25,10 +25,10 @@
 				<P CLASS="western" ALIGN=CENTER>1</P>
 			</TD>
 			<TD WIDTH=140 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Aug &ndash; 20</P>
+				<P CLASS="western" ALIGN=CENTER>Jan &ndash; 11</P>
 			</TD>
 			<TD WIDTH=177 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Sept &ndash; 24</P>
+				<P CLASS="western" ALIGN=CENTER>Feb &ndash; 1</P>
 			</TD>
 			<TD WIDTH=122 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0.04in">
 				<P CLASS="western" ALIGN=CENTER>A, B, ch. 1</P>
@@ -39,24 +39,25 @@
 				<P CLASS="western" ALIGN=CENTER>2</P>
 			</TD>
 			<TD WIDTH=140 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Aug &ndash; 27</P>
+				<P CLASS="western" ALIGN=CENTER>Jan &ndash; 22</P>
 			</TD>
 			<TD WIDTH=177 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Oct &ndash; 1</P>
+				<P CLASS="western" ALIGN=CENTER>Feb &ndash; 8</P>
 			</TD>
 			<TD WIDTH=122 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0.04in">
 				<P CLASS="western" ALIGN=CENTER>ch.2</P>
 			</TD>
 		</TR>
+		<!--
 		<TR VALIGN=TOP>
 			<TD WIDTH=102 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
 				<P CLASS="western" ALIGN=CENTER>3</P>
 			</TD>
 			<TD WIDTH=140 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Sept &ndash; 3</P>
+				<P CLASS="western" ALIGN=CENTER>Jan &ndash; 25</P>
 			</TD>
 			<TD WIDTH=177 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Nov &ndash; 5</P>
+				<P CLASS="western" ALIGN=CENTER>Feb &ndash; 22</P>
 			</TD>
 			<TD WIDTH=122 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0.04in">
 				<P CLASS="western" ALIGN=CENTER>ch.3</P>
@@ -67,10 +68,10 @@
 				<P CLASS="western" ALIGN=CENTER>4</P>
 			</TD>
 			<TD WIDTH=140 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Sept &ndash; 24</P>
+				<P CLASS="western" ALIGN=CENTER>Feb &ndash; 11</P>
 			</TD>
 			<TD WIDTH=177 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Nov &ndash; 19</P>
+				<P CLASS="western" ALIGN=CENTER>Mar &ndash; TBD</P>
 			</TD>
 			<TD WIDTH=122 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0.04in">
 				<P CLASS="western" ALIGN=CENTER>ch.4</P>
@@ -81,10 +82,10 @@
 				<P CLASS="western" ALIGN=CENTER>5</P>
 			</TD>
 			<TD WIDTH=140 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Oct &ndash; 22</P>
+				<P CLASS="western" ALIGN=CENTER>Mar &ndash; TBD</P>
 			</TD>
 			<TD WIDTH=177 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Nov &ndash; 26</P>
+				<P CLASS="western" ALIGN=CENTER>Mar &ndash; TBD</P>
 			</TD>
 			<TD WIDTH=122 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0.04in">
 				<P CLASS="western" ALIGN=CENTER>ch.5/6</P>
@@ -95,10 +96,10 @@
 				<P CLASS="western" ALIGN=CENTER>6</P>
 			</TD>
 			<TD WIDTH=140 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Oct &ndash; 29</P>
+				<P CLASS="western" ALIGN=CENTER>TBD &ndash; TBD</P>
 			</TD>
 			<TD WIDTH=177 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Dec &ndash; 3</P>
+				<P CLASS="western" ALIGN=CENTER>TBD &ndash; TBD</P>
 			</TD>
 			<TD WIDTH=122 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0.04in">
 				<P CLASS="western" ALIGN=CENTER>ch.6/7</P>
@@ -109,10 +110,10 @@
 				<P CLASS="western" ALIGN=CENTER>7</P>
 			</TD>
 			<TD WIDTH=140 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Nov &ndash; 19</P>
+				<P CLASS="western" ALIGN=CENTER>TBD &ndash; TBD</P>
 			</TD>
 			<TD WIDTH=177 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Dec &ndash; 12</P>
+				<P CLASS="western" ALIGN=CENTER>TBD &ndash; TBD</P>
 			</TD>
 			<TD WIDTH=122 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0.04in">
 				<P CLASS="western" ALIGN=CENTER>ch.8</P>
@@ -123,14 +124,14 @@
 				<P CLASS="western" ALIGN=CENTER>8</P>
 			</TD>
 			<TD WIDTH=140 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Nov &ndash; 19</P>
+				<P CLASS="western" ALIGN=CENTER>TBD &ndash; TBD</P>
 			</TD>
 			<TD WIDTH=177 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0in">
-				<P CLASS="western" ALIGN=CENTER>Dec &ndash; 12</P>
+				<P CLASS="western" ALIGN=CENTER>TBD &ndash; TBD</P>
 			</TD>
 			<TD WIDTH=122 STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0.04in; padding-left: 0.04in; padding-right: 0.04in">
-				<P CLASS="western" ALIGN=CENTER>ch. 1 &ndash; 8 (review)</P>
+				<P CLASS="western" ALIGN=CENTER>ch. 9 &ndash; TBD</P>
 			</TD>
-		</TR>
+		</TR>!-->
 	</TBODY>
 </TABLE>
