--- a/faq/index.html
+++ b/faq/index.html
@@ -70,7 +70,7 @@
                             Assignments 4-5 before Quiz 2<br>
                             Assignments 6-7 before Quiz 3<br>
                             Assignments 8 before the Final</p>
-                            <p><iframe src="ITS_schedule.html" style="border:2px solid #999;padding:1em" width="100%" height="100%">
+                            <p><iframe src="ITS_schedule.html" style="border:2px solid #999;padding:1em" width="100%" height="60%">
   <p>Your browser does not support iframes.</p>
 </iframe></p>
                             </li>
@@ -79,7 +79,7 @@
                      </dd>
                      <dt id="faq6">6. How do I get involved in developing ITS as part of an undergraduate research project?</dt>
                      <dd>
-                        <p>Visit <a href="http://vip.gatech.edu" target="_blank">Vertically-Integrated Projects</a> to learn more.</p>
+                        <p>Visit <a href="http://vip.gatech.edu" target="_blank">Vertically-Integrated Projects</a> to learn more about the <a href="http://vip.gatech.edu/its/vip-its.html" target="_blank">Intelligent Tutoring System</a> Team.</p>
                         <p>Email Prof. James McClellan: <i>jim.mcclellan@ece.gatech.edu</i> - along with your resume.</p>
                      </dd>                     
                   </dl>
